--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ before_install:
   - sudo apt-get install -qq python-matplotlib
   - sudo apt-get install -qq phantomjs
   - sudo apt-get install -qq npm
-  - sudo npm install -g phantom-jasmine
+  - npm install grunt
+  - npm install grunt-jasmine-runner
 install:
   - "pip install --use-mirrors sympy coverage"
 script: bin/test
